--- a/src/Header.css
+++ b/src/Header.css
@@ -1,63 +1,162 @@
-.app__header {
-  height: 30px;
+.container-fluid {
+  height: 70px;
+  padding: 0 30px;
+  background-color: #ffffff;
+}
+
+.ant-layout-header {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 999;
+}
+
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #ffffff;
-  position: sticky;
-  top: 0;
-  padding: 20px 10px;
-  z-index: 100;
-  flex-wrap: wrap;
+  padding: 15px 0;
 }
 
-.header__title {
-  flex: 0.6;
-}
-
-.title {
-  margin-left: 20px;
+.header .logo {
   font-size: 25px;
-  letter-spacing: 7px;
-  font-family: "Jura", sans-serif;
+  text-transform: uppercase;
+  font-weight: 550;
+  letter-spacing: 5px;
+  padding-left: 10px;
 }
 
-.header__nav {
+.header .logo a {
+  color: #333;
+}
+
+.header .ant-anchor-wrapper {
+  background: none;
+}
+
+.header .ant-anchor {
   display: flex;
-  margin-left: 10px;
-  justify-content: space-evenly;
 }
 
-.header__option {
-  flex-direction: column;
-  margin-left: 10px;
-  margin-right: 10px;
-  color: black;
+.header .ant-anchor-ink {
+  display: none;
 }
 
-.header__element {
-  letter-spacing: -1px;
-  font-size: 15px;
-  font-weight: bolder;
-  padding: 2px;
+.header .ant-anchor-link {
+  padding: 0 20px;
+  line-height: 1.4;
+  position: relative;
 }
 
-.header__dropdown {
-  display: inline-block;
-  -webkit-transform: scale(2, 1);
-  transform: scale(2, 1);
-  color: darkgray;
-  font-size: 9px;
-  padding: 2px;
-  cursor: pointer;
+.header .ant-anchor-link:before,
+.header .ant-anchor-link:after {
+  content: "";
+  background: #1890ff;
+  width: 1px;
+  position: absolute;
+  top: 2px;
+  bottom: 2px;
+  left: 30%;
+  opacity: 0;
+  transition: all 0.3s linear;
 }
 
-@media (max-width: 990px) {
-  .header {
-    flex-direction: row;
+.header .ant-anchor-link:after {
+  left: auto;
+  right: 30%;
+}
+
+.header .ant-anchor-link.ant-anchor-link-active:before,
+.header .ant-anchor-link:hover:before {
+  left: 5%;
+  opacity: 1;
+}
+
+.header .ant-anchor-link.ant-anchor-link-active:after,
+.header .ant-anchor-link:hover:after {
+  right: 5%;
+  opacity: 1;
+}
+
+.header .ant-anchor-link .ant-anchor-link-title {
+  font-size: 12px;
+  font-weight: 600;
+  letter-spacing: normal;
+}
+
+/* menu */
+
+.header .ant-menu {
+  border: 0;
+  background: none !important;
+}
+
+.header .ant-menu li.ant-menu-item {
+  position: relative;
+  color: #333;
+}
+
+.header .ant-menu li.ant-menu-item:before,
+.header .ant-menu li.ant-menu-item:after {
+  content: "";
+  background: #1890ff;
+  width: 1px;
+  position: absolute;
+  top: 2px;
+  bottom: 2px;
+  left: 30%;
+  opacity: 0;
+  transition: all 0.3s linear;
+}
+
+.header .ant-menu li.ant-menu-item:after {
+  left: auto;
+  right: 30%;
+}
+
+.header .ant-menu li.ant-menu-item,
+.header .ant-menu li.ant-menu-item-selected {
+  border: 0 !important;
+}
+
+.header .ant-menu li.ant-menu-item-selected,
+.header .ant-menu li.ant-menu-item:hover {
+  color: #1890ff;
+  background: none;
+}
+
+.header .ant-menu li.ant-menu-item-selected:before,
+.header .ant-menu li.ant-menu-item:hover:before {
+  left: 5%;
+  opacity: 1;
+}
+
+.header .ant-menu li.ant-menu-item-selected:after,
+.header .ant-menu li.ant-menu-item:hover:after {
+  right: 5%;
+  opacity: 1;
+}
+
+.header .ant-btn-primary {
+  color: #ffffff;
+  background: #393e46;
+  border-color: #393e46;
+}
+
+.mobileVisible {
+  display: none;
+}
+
+.mobileHidden {
+  display: block;
+}
+
+@media only screen and (max-width: 750px) {
+  .mobileVisible {
+    display: block;
   }
 
-  .header__nav {
-    margin-top: 2px;
+  .mobileHidden {
+    display: none;
   }
 }
