--- a/src/Staff.scss
+++ b/src/Staff.scss
@@ -23,9 +23,10 @@ $button-color: #393e46;
   padding: 0.6rem;
 }
 
-.ant-image-img {
+.ant-image-img.staff__image {
   max-height: 400px;
   max-width: 500px;
+  min-width: auto !important;
   padding: 0.6rem;
   border-radius: 0.9rem;
 }
