--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,33 @@
   .div__cards {
     display: flex;
     margin: 0 10px;
-    overflow: hidden;
+    overflow-x: scroll;
+  }
+
+  .div__cards::-webkit-scrollbar {
+    display: none;
+  }
+  /* width */
+  ::-webkit-scrollbar {
+    width: 20px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: grey;
+    border-radius: 10px;
+    size: 1rem;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #393e46;
   }
   .card:not(:last-child) {
     margin-left: 20px;
