--- a/src/Card.scss
+++ b/src/Card.scss
@@ -7,7 +7,7 @@
   max-width: 300px;
 }
 
-.ant-image-img {
+.ant-image-img.card__image {
   max-height: 400px;
   min-width: 300px;
   padding: 0.6rem;
