--- a/src/App.scss
+++ b/src/App.scss
@@ -50,3 +50,14 @@
 .ant-typography.featured__section {
   padding: 5px 2rem 0 2rem;
 }
+
+
+.promo__section{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  border-top: 1px solid lightgrey;
+  border-bottom: 1px solid lightgrey;
+}
