--- a/src/Staff.scss
+++ b/src/Staff.scss
@@ -58,3 +58,12 @@ $button-color: #393e46;
   font-size: 14px;
   border-radius: 0.6rem;
 }
+
+@media only screen and (min-width: 1000px) {
+  .ant-image-img.staff__image {
+    max-width: 500px;
+    padding: 0.6rem;
+    border-radius: 0.9rem;
+    object-fit: cover;
+  }
+}
