--- a/src/App.scss
+++ b/src/App.scss
@@ -12,8 +12,8 @@
     overflow-x: scroll;
   }
 
-  .div__cards::-webkit-scrollbar {
-    display: none;
+  ::-webkit-scrollbar {
+    display: block;
   }
   /* width */
   ::-webkit-scrollbar {
@@ -22,13 +22,12 @@
 
   /* Track */
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
     border-radius: 10px;
   }
 
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: grey;
+    background: transparent;
     border-radius: 10px;
     size: 1rem;
   }
@@ -37,6 +36,7 @@
   ::-webkit-scrollbar-thumb:hover {
     background: #393e46;
   }
+  
   .card:not(:last-child) {
     margin-left: 20px;
     margin-top: 10px;
